--- a/assets/style.css
+++ b/assets/style.css
@@ -66,8 +66,6 @@
   --ff-code: var(--ff-mono);
 }
 
-
-
 html {
   font-size: 100%;
   font-family: var(--ff-body), var(--ff-emoji);
@@ -152,6 +150,10 @@ h6 {
 
 li {
   list-style: none;
+}
+
+details > summary {
+  cursor: pointer;
 }
 
 /* ---- layout ---- */
